--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,14 @@
-/* styles.css */
+* {
+  box-sizing: border-box;
+}
 
-/* Add styles here to customize the appearance of your app */
+body {
+  font-family: sans-serif;
+}
+
+footer {
+  margin-top: 2em;
+  border-top: 0.1em solid #666;
+  font-size: 0.8em;
+  color: #666;
+}
